3D Cursor is not in the right place after Shift + C (Center Cursor and Frame All) #93971

Closed
opened 2021-12-11 19:08:29 +01:00 by Mahdi Pezhman · 13 comments

System Information
Operating system: macOS-11.6.1-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris Pro OpenGL Engine Intel Inc. 4.1 INTEL-16.5.4

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Worked: 2.93
Caused by bda9e4238a

Short description of error
Pressing Shift+C resets the position of the 3D cursor and centers the view on the origin. However, if the camera doesn't get moved, the viewport doesn't update, so the 3D cursor appears to be in the wrong position.

Exact steps for others to reproduce the error

  1. Hit Shift+C to center the camera and cursor
  2. Move the 3D cursor somewhere other than the origin
  3. Hit Shift+C again
  4. The 3D cursor doesn't visibly move.
  5. Move the camera
  6. The 3D cursor appears in the right place
**System Information** Operating system: macOS-11.6.1-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris Pro OpenGL Engine Intel Inc. 4.1 INTEL-16.5.4 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Worked: 2.93 Caused by bda9e4238a **Short description of error** Pressing Shift+C resets the position of the 3D cursor and centers the view on the origin. However, if the camera doesn't get moved, the viewport doesn't update, so the 3D cursor appears to be in the wrong position. **Exact steps for others to reproduce the error** 1. Hit Shift+C to center the camera and cursor 2. Move the 3D cursor somewhere other than the origin 3. Hit Shift+C again 4. The 3D cursor doesn't visibly move. 5. Move the camera 6. The 3D cursor appears in the right place
Author

Added subscriber: @Mahdi-Pezhman

Added subscriber: @Mahdi-Pezhman

#94095 was marked as duplicate of this issue

#94095 was marked as duplicate of this issue

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can reproduce this on the 3.0 release, as well as in the 3.1 alpha.

I can reproduce this on the 3.0 release, as well as in the 3.1 alpha.

Added subscriber: @Memento

Added subscriber: @Memento

I tried this on Blender 3.0.0 release on Fedora 35 Linux and can reproduce the behaviour there as well.

I tried this on Blender 3.0.0 release on Fedora 35 Linux and can reproduce the behaviour there as well.

Added subscribers: @Vyach, @PratikPB2123

Added subscribers: @Vyach, @PratikPB2123
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Caused by bda9e4238a

cc @ideasman42

Regression so changing priority to High

Caused by bda9e4238a cc @ideasman42 Regression so changing priority to High

This issue was referenced by b9f5e6c0b4

This issue was referenced by b9f5e6c0b4cb73a5641e24ef1c18dc94fc91a413

This issue was referenced by e85d7d5a28

This issue was referenced by e85d7d5a2880c3e9721eafa5a72ce249c5f131f7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2021-12-15 14:22:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93971
No description provided.