source/blender/editors/space_view3d/space_view3d.c
@@ -1275,6 +1275,7 @@ static void view3d_main_region_message_subscribe(const wmRegionMessageSubscribeP
       &RNA_Object,
       &RNA_UnitSettings, /* grid-floor */
 
+      &RNA_View3DCursor,
       &RNA_View3DOverlay,
       &RNA_View3DShading,
       &RNA_World,
